# polybench-gpu-noarr

./: CMakeLists.txt  build.sh  collect.sh  compare.sh  parse_data.sh  run_baseline_algorithm.sh  run_noarr_algorithm.sh
CPP/: main.cpp
CUDA/2DCONV/: 2DConvolution.cu  2DConvolution.cuh  2dconv.cu  2dconv.cuh
CUDA/2MM/: 2mm.cu  2mm.cuh  2mm.hpp
CUDA/3DCONV/: 3dconv.cu  3dconv.cuh
CUDA/3MM/: 3mm.cpp  3mm.cpp.cu  3mm.cu  3mm.cuh  3mm.hpp
CUDA/ADI/: adi.cu  adi.cuh  adi.hpp
CUDA/ATAX/: atax.cu  atax.cuh  atax.hpp
CUDA/BICG/: bicg.cu  bicg.cuh  bicg.hpp
CUDA/CONV2D/: conv2d.cu  conv2d.hpp
CUDA/CONV3D/: conv3d.cu  conv3d.hpp
CUDA/CORR/: corr.cu  corr.cuh  corr.hpp
CUDA/COVAR/: covar.cu  covar.cuh  covar.hpp
CUDA/DOITGEN/: doitgen.cu  doitgen.cuh  doitgen.hpp
CUDA/FDTD-2D/: fdtd-2d.cu  fdtd-2d.cuh  fdtd-2d.hpp
CUDA/GEMM/: gemm.cu  gemm.cuh  gemm.hpp
CUDA/GEMVER/: gemver.cu  gemver.cuh  gemver.hpp
CUDA/GESUMMV/: gesummv.cu  gesummv.cuh  gesummv.hpp
CUDA/GRAMSCHM/: gramschm.cu  gramschm.cuh  gramschm.hpp  gramschmidt.cu  gramschmidt.cuh
CUDA/JACOBI1D/: jacobi1d.cu  jacobi1d.cuh  jacobi1d.hpp
CUDA/JACOBI2D/: jacobi2d.cu  jacobi2d.cuh  jacobi2d.hpp
CUDA/LU/: lu.cu  lu.cuh  lu.hpp
CUDA/MVT/: mvt.cu  mvt.cuh  mvt.hpp
CUDA/SYR2K/: syr2k.cu  syr2k.cuh  syr2k.hpp
CUDA/SYRK/: syrk.cu  syrk.cuh  syrk.hpp
include/: common.hpp  defines.cuh
